fix photos on mobile mode

--- a/src/index.css
+++ b/src/index.css
@@ -20,14 +20,11 @@ code {
 
 .navbar {
   display: flex;
-  align-items: center;
   border: solid;
   color: #c6c3d9;
   background-color: #cfcfe0;
-  justify-content: space-between;
   padding: 15px 55px 25px;
-  width: 100%;
-  overflow: auto;
+  
 }
 
 a {
@@ -63,18 +60,20 @@ h2 {
   text-align: center;
   font-family: "Prompt", sans-serif;
 }
-@media (min-width: 480px) and (max-width: 720px) {
-  .waterfallphoto {
+@media only screen {
+  img.waterfallphoto {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
     padding-top: 50px;
-    width: 465px;
-    height: 500px;
     float: auto;
+    height: 400px;
+    width: 300px;
+    margin-bottom: 25px;
   }
 }
+
 
 
 
@@ -164,19 +163,19 @@ h3 {
   font-family: "Prompt", sans-serif;
 }
 
-@media (min-width: 480px) {
+@media only screen {
   .castlephoto {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
     padding-top: 50px;
-    width: 465px;
-    height: 500px;
     float: auto;
+    height: 400px;
+    width: 300px;
+    margin-bottom: 25px;
   }
 }
-
 .header2 a {
   background-color: #dbcde8;
   border: 1px solid #422800;
